<resources>
    <string name="app_name">wisEat</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="facebook_app_id">156568555035441</string>
    <!-- Screen #1 Design -->
    <string name="welcome">Welcome to WisEat, an app that\n helps you consume food products smarter :)</string>
    <string name="ggl_login">\t\t\tLog in with Google</string>
    <string name="cpyRights">© 20182W71. All rights reserved.</string>
    <!--End Of Screen #1 Design -->

    <!-- Set Profile -->
    <string name="title_activity_set_profile">setProfile</string>
    <string name="guidelines">Please select a consumption profile, and\n set the desired degree of avoidance</string>
    <string name="animalFriendly">Animals\tFriendly</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="pork">pork</string>
    <string name="celery">celery</string>
    <string name="done">DONE</string>
    <string name="shellfish">shellfish</string>
    <string name="sesame">sesame</string>
    <string name="peanuts">Peanuts Free</string>
    <string name="vegan">Vegan</string>
    <string name="eggsfree">Eggs Free</string>
    <string name="beef">beef</string>
    <string name="chicken">chicken</string>
    <string name="i_m_avoiding">i_m_avoiding</string>
    <string name="fish">fish</string>
    <string name="honey">honey</string>
    <string name="lupin">lupin</string>
    <string name="soy">soy</string>
    <string name="sulphite">sulphite</string>
    <string name="algae">algae</string>
    <string name="nuts">nuts</string>
    <string name="mustard">mustard</string>
    <string name="corn">corn</string>
    <string name="insects">insects</string>
    <string name="glutenfree">Gluten Free</string>
    <string name="dairyfree">Dairy Free</string>
    <string name="custom">Customize</string>
    <!--End Of Screen Set Profile -->

    <string name="title_activity_home_page">HomePage</string>
    <string name="title_activity_search_ingredients">SearchIngredients</string>

    <!--Ocr View -->
    <string name="pic_take">Take A Picture</string>
    <string name="rotate">Rotate Picture</string>
    <string name="identify">Identify text</string>
    <string name="check_prod">Check Ingredients</string>
    <!--Ocr View -->

    <!---HomePage-->
    <string name="take_picture">Take a picture</string>
    <string name="typing">\tType manually</string>
    <string name="logout">\tLog Out</string>
    <string name="profile">Edit Profile</string>
    <string name="home_guidelines">Welcome!\n How would you like to check the ingredients in your product?</string>
    <!---HomePage-->


    <!---Manual Search-->
    <string name="pls_search">Please enter ingredients to search</string>
    <string name="instructions">Use a comma to separate between the ingredients</string>
    <!---Manual Search-->

</resources>