<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">


    <CheckBox
        android:id="@+id/beef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/beef" />

    <CheckBox
        android:id="@+id/pork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/chicken"
        android:text="@string/pork" />

    <CheckBox
        android:id="@+id/fish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pork"
        android:text="@string/fish" />

    <CheckBox
        android:id="@+id/honey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/honey" />

    <CheckBox
        android:id="@+id/algae"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/soy"
        android:text="@string/algae" />

    <CheckBox
        android:id="@+id/shellfish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/fish"
        android:text="@string/shellfish" />

    <CheckBox
        android:id="@+id/sulphite"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/corn"
        android:text="@string/sulphite" />

    <CheckBox
        android:id="@+id/nuts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/algae"
        android:text="@string/nuts" />

    <CheckBox
        android:id="@+id/mustard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/honey"
        android:layout_alignParentStart="true"
        android:text="@string/mustard" />

    <CheckBox
        android:id="@+id/celery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sesame"
        android:text="@string/celery" />

    <CheckBox
        android:id="@+id/corn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Insects"
        android:text="@string/corn" />

    <CheckBox
        android:id="@+id/peanuts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/sulphite"
        android:text="@string/peanuts" />

    <CheckBox
        android:id="@+id/Insects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/shellfish"
        android:text="@string/insects" />

    <CheckBox
        android:id="@+id/lupin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/celery"
        android:text="@string/lupin" />

    <CheckBox
        android:id="@+id/sesame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/peanuts"
        android:text="@string/sesame" />

    <CheckBox
        android:id="@+id/chicken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/beef"
        android:text="@string/chicken" />

    <CheckBox
        android:id="@+id/soy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/lupin"
        android:text="@string/soy" />

    <RadioGroup
        android:id="@+id/beefRG"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/beef"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/beef1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Never" />

        <RadioButton
            android:id="@+id/beef2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Occasionally" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/chickenRG"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/chicken"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/chicken1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Never" />

        <RadioButton
            android:id="@+id/chicken2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Occasionally" />

    </RadioGroup>
    <RadioGroup
        android:id="@+id/porkRG"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/pork"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/pork1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Never" />

        <RadioButton
            android:id="@+id/pork2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Occasionally" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/fishRG"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/fish"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/fish1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Never" />

        <RadioButton
            android:id="@+id/fish2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Occasionally" />

    </RadioGroup>


    <RadioGroup
        android:id="@+id/shellfishRG"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/shellfish"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/shellfish1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Never" />

        <RadioButton
            android:id="@+id/shellfish2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Occasionally" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/InsectsRG"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/Insects"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/Insects1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Never" />

        <RadioButton
            android:id="@+id/Insects2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Occasionally" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/cornRG"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/corn"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/corn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Never" />

        <RadioButton
            android:id="@+id/corn2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Occasionally" />

    </RadioGroup>


    <RadioGroup
        android:id="@+id/sulphiteRG"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/sulphite"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/sulphite1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Never" />

        <RadioButton
            android:id="@+id/sulphite2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Occasionally" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/peanutsRG"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/peanuts"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/peanuts1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Never" />

        <RadioButton
            android:id="@+id/peanuts2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Occasionally" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/sesameRG"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/sesame"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/sesame1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Never" />

        <RadioButton
            android:id="@+id/sesame2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Occasionally" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/celeryRG"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/celery"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/celery1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Never" />

        <RadioButton
            android:id="@+id/celery2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Occasionally" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/lupinRG"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/lupin"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/lupin1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Never" />

        <RadioButton
            android:id="@+id/lupin2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Occasionally" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/soyRG"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/soy"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/soy1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Never" />

        <RadioButton
            android:id="@+id/soy2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Occasionally" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/algaeRG"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/algae"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/algae1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Never" />

        <RadioButton
            android:id="@+id/algae2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Occasionally" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/nutsRG"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/nuts"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/nuts1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Never" />

        <RadioButton
            android:id="@+id/nuts2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Occasionally" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/mustardRG"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/mustard"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/mustard1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Never" />

        <RadioButton
            android:id="@+id/mustard2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Occasionally" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/honeyRG"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/honey"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/honey1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Never" />

        <RadioButton
            android:id="@+id/honey2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Occasionally" />

    </RadioGroup>
</RelativeLayout>