<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <CheckBox
        android:id="@+id/beef"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/beef" />

    <CheckBox
        android:id="@+id/pork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/chicken"
        android:text="@string/pork" />

    <CheckBox
        android:id="@+id/fish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/pork"
        android:text="@string/fish" />

    <CheckBox
        android:id="@+id/shellfish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/fish"
        android:text="@string/shellfish" />

    <CheckBox
        android:id="@+id/Insects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/shellfish"
        android:text="@string/insects" />

    <CheckBox
        android:id="@+id/chicken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/beef"
        android:text="@string/chicken" />

    <RadioGroup
        android:id="@+id/beefRG"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/beef"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/beef1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Never" />

        <RadioButton
            android:id="@+id/beef2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Occasionally" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/chickenRG"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/chicken"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/chicken1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Never" />

        <RadioButton
            android:id="@+id/chicken2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Occasionally" />

    </RadioGroup>
    <RadioGroup
        android:id="@+id/porkRG"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/pork"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/pork1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Never" />

        <RadioButton
            android:id="@+id/pork2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Occasionally" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/fishRG"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/fish"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/fish1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Never" />

        <RadioButton
            android:id="@+id/fish2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Occasionally" />

    </RadioGroup>


    <RadioGroup
        android:id="@+id/shellfishRG"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/shellfish"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/shellfish1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Never" />

        <RadioButton
            android:id="@+id/shellfish2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Occasionally" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/InsectsRG"
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/Insects"
        android:orientation="horizontal"
        android:visibility="gone">

        <RadioButton
            android:id="@+id/Insects1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Never" />

        <RadioButton
            android:id="@+id/Insects2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Occasionally" />

    </RadioGroup>


</RelativeLayout>