<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".HomePage"
    tools:showIn="@layout/activity_home_page">

    <TextView
        android:id="@+id/guidelines_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="121dp"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/home_guidelines"
        android:textSize="18sp"
        android:textStyle="bold" />
    <RelativeLayout
        android:layout_width="117dp"
        android:layout_height="81dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="19dp">

        <ImageButton
            android:id="@+id/ButtonSetProfile"
            android:layout_width="59dp"
            android:layout_height="57dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="false"
            android:background="@drawable/profile_pressedx"
            android:cropToPadding="false" />

        <TextView
            android:id="@+id/Logout_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="casual"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@color/profile"
            android:textSize="15sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="270dp"
        android:layout_height="110dp"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/addPic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:fontFamily="casual"
            android:text="@string/take_picture"
            android:textColor="@color/takePic"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/take_picture_xml"/>



    </RelativeLayout>

    <RelativeLayout
        android:layout_width="266dp"
        android:layout_height="96dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="95dp">

        <Button
            android:id="@+id/EnterIngredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:fontFamily="casual"
            android:text="@string/typing"
            android:textColor="@color/manually"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/enter_ingredients_xml"/>


    </RelativeLayout>



</RelativeLayout>